--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temp_app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@sqlite.org/sqlite-wasm": "^3.51.2-build6",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
