--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@sqlite.org/sqlite-wasm": "^3.51.2-build6",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
